syntax = "proto3";

package sec06;

option java_multiple_files = true;
option java_package = "org.shubham.models.sec06";

message BalanceCheckRequest {
  int32 account_num = 1;
}

message AccountBalance {
  int32 account_num = 1;
  int32 balance = 2;
}

//define a function (remote procedure)
service BankService {
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
}